...
    let exchangeRatesViewController = exchangeRatesViewController()
    let mainViewController = mainViewController()

    /// This `_R.id.currencyListViewController` struct is generated, and contains static references to 1 accessibility identifiers.
    struct currencyListViewController {

      /// Accessibility identifier `currencyListVCTitleLabel`.
      let currencyListVCTitleLabel = "currencyListVCTitleLabel"
    }

    /// This `_R.id.exchangeRatesViewController` struct is generated, and contains static references to 2 accessibility identifiers.
    struct exchangeRatesViewController {

      /// Accessibility identifier `exchangeRateVCInfoLabel`.
      let exchangeRateVCInfoLabel = "exchangeRateVCInfoLabel"

      /// Accessibility identifier `exchangeRatesTF`.
      let exchangeRatesTF = "exchangeRatesTF"
    }

    /// This `_R.id.mainViewController` struct is generated, and contains static references to 4 accessibility identifiers.
    struct mainViewController {

      /// Accessibility identifier `exchangeRateVCButton`.
      let exchangeRateVCButton = "exchangeRateVCButton"

      /// Accessibility identifier `mainLastUpdatedLabel`.
      let mainLastUpdatedLabel = "mainLastUpdatedLabel"

      /// Accessibility identifier `mainTitleLabel`.
      let mainTitleLabel = "mainTitleLabel"

      /// Accessibility identifier `shareButton`.
      let shareButton = "shareButton"
    }
  }

  /// This `_R.nib` struct is generated, and contains static references to 4 nibs.
  struct nib {
...
