...
 //       currencyInfoTableView.delegate = self
        currencyInfoTableView.separatorColor = .clear
   //     currencyInfoTableView.register(UINib(nibName: Constants.nibNameCustomCell, bundle: nil), forCellReuseIdentifier: Constants.cellIdentifier)
    }
    
    private func setupAddCurrencyButton() {
        addCurrencyButton.setAttributedTitle(createTitleNameForButton(text: "Add Currency", textSize: 13), for: .normal)
    }
    
    private func setupUpdateInfoLabel() {
        updatedInfoLabel.text = "Last Updated"
        updatedInfoLabel.font = R.font.latoRegular(size: 12)
        updatedInfoLabel.textColor = UIColor(red: 0.342, green: 0.342, blue: 0.342, alpha: 1)
...
